--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
 
         <section class="hero">
 
+          <div class="photo">
+
+            <div class="social-container">
+              <nav class="social-media-icons">
+                <ul>
+                  <li><a href="https://www.facebook.com/Shoulder-Education-By-Paul-B-Roache-MD-1815885698482185/" target="_blank" class="fb"><span class="name">Facebook</span></a></li>
+                  <li><a href="https://www.instagram.com/shouldereducation/" target="_blank" class="ig"><span class="name">Instagram</span></a></li>
+                  <li><a href="https://www.youtube.com/channel/UCT81PUb9q4oX0ozkU6VDc9A" target="_blank" class="yt"><span class="name">Youtube</span></a></li>
+                </ul>
+              </nav>
+            </div>
+
+          </div>
+
           <div class="hero-container">
 
             <div class="mission">
@@ -83,14 +97,6 @@
               </form>
             </div>
 
-            <nav class="social-media-icons">
-              <ul>
-                <li><a href="https://www.facebook.com/Shoulder-Education-By-Paul-B-Roache-MD-1815885698482185/" target="_blank" class="fb"><span class="name">Facebook</span></a></li>
-                <li><a href="https://www.instagram.com/shouldereducation/" target="_blank" class="ig"><span class="name">Instagram</span></a></li>
-                <li><a href="https://www.youtube.com/channel/UCT81PUb9q4oX0ozkU6VDc9A" target="_blank" class="yt"><span class="name">Youtube</span></a></li>
-              </ul>
-            </nav>
-
           </div>
 
         </section>
@@ -104,13 +110,17 @@
 							<ul class="innovations-list">
 								<li>
 									<figure>
-										<video></video>
+                    <div class="video-container">
+                        <iframe width="1183" height="665" src="https://www.youtube.com/embed/ofeCkqrHThw?modestbranding=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
 										<figcaption><strong>VIDEO:</strong> New Treatment Option: Tendon regeneration revolutionizing rotator cuff surgery.</figcaption>
 									</figure>
 								</li>
 								<li>
 									<figure>
-										<video></video>
+                    <div class="video-container">
+                        <iframe width="1280" height="725" src="https://www.youtube.com/embed/upg8FEVKMKY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
 										<figcaption><strong>VIDEO:</strong> New Research Methods: Lorem ipsum dolor sit amet.</figcaption>
 									</figure>
 								</li>
@@ -123,7 +133,7 @@
 
 						<section class="injuries">
 							<h2>Injuries & Treatment</h2>
-							<nav class="section-menu">
+							<nav class="injuries-list">
 								<ul>
 									<li><a href="">AC Joint Separations</a></li>
 									<li><a href="">Basic Anatomy and Function</a></li>
@@ -143,12 +153,24 @@
 						</section>
 
 						<section class="book-promo">
+
 							<figure>
-								<img src="book.jpg">
+
+                <div class="buttons-container">
+                  <img src="images/shoulder-handbook.png" alt="Shoulder Handbook">
+                  <ul>
+                    <li><a href="#" class="button"><span>e</span>Book</a></li>
+                    <li><a href="#" class="button">Paperback</a></li>
+                  </ul>
+                </div>
+
 								<figcaption>
-									<p>This handbook is the result of the countless conversations I’ve had with my patients about their rotator cuff injuries and other common shoulder problems.</p>
-									<p><a href="">Learn more ></a></p></figcaption>
-							</figure>
+									  <p>This handbook is the result of the countless conversations I’ve had with my patients about their rotator cuff injuries and other common shoulder problems. <a href=""><strong>Learn more ></strong></a></p>
+									</figcaption>
+              </figure>
+
+
+
 						</section>
 
 					</div>
@@ -158,15 +180,16 @@
 						<section class="consultations">
 							<h2>Patient Consulations</h2>
 							<p>Request an appointment with expert shoulder surgeon Dr. Paul B. Roache, MD.</p>
-							<p><a href="">Book Appointment</a></p>
+							<p><a href="" class="button">Book Appointment</a></p>
 						</section>
 
 						<section class="continuing-ed">
 							<h2>Continuing Education</h2>
-							<p><a href="">Essential Yoga Anatomy</a></p>
-							<p>Rated the #1 anatomy course on the market for yogis, athletes, personal trainers and all body workers!</p>
+							<p><a href=""><strong>Essential Yoga Anatomy</strong></a><br />Rated the #1 anatomy course on the market for yogis, athletes, personal trainers and all body workers!</p>
 							<figure>
-								<video></video>
+              <div class="video-container">
+                  <iframe width="1247" height="701" src="https://www.youtube.com/embed/Z8-2Cyef5lI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
 								<figcaption><strong>VIDEO:</strong> Vinyasa teacher Jason Crandell and orthopedic surgeon Paul B. Roache, MD.</figcaption>
 							</figure>
 						</section>
@@ -216,6 +239,7 @@
 
     </div>
 
+    <script src="js/vendor/modernizr.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
 
