--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="video-container">
                         <iframe width="1280" height="725" src="https://www.youtube.com/embed/upg8FEVKMKY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-										<figcaption><strong>VIDEO:</strong> New Research Methods: Lorem ipsum dolor sit amet.</figcaption>
+										<figcaption><strong>VIDEO:</strong> New Research Methods: Rt sh cuff avulsion repair</figcaption>
 									</figure>
 								</li>
 							</ul>
@@ -203,38 +203,42 @@
 			<section class="partners">
 				<nav>
 					<ul>
-						<li><a href=""></a></li>
-						<li><a href=""></a></li>
-						<li><a href=""></a></li>
-						<li><a href=""></a></li>
-						<li><a href=""></a></li>
+						<li><a href="" class="aaos"><img src="images/logo-aaos.svg" alt="AAOS"></a></li>
+						<li><a href="" class="abos"><img src="images/logo-abos.svg" alt="ABOS"></a></li>
+						<li><a href="" class="aana"><img src="images/logo-aana.png" alt="AANA"></a></li>
+						<li><a href="" class="esska"><img src="images/logo-esska.png" alt="ESSKA"></a></li>
+						<li><a href="" class="isakos"><img src="images/logo-isakos.png" alt="ISAKOS"></a></li>
 					</ul>
 				</nav>
 			</section>
 
       <footer id="footer">
+        <div class="footer-container">
 
+          <a href="/" class="logo">Home</a>
 
-				<a href="/" class="logo">Home</a>
+          <div class="social-container">
+            <nav class="social-media-icons">
+              <ul>
+                <li><a href="https://www.facebook.com/Shoulder-Education-By-Paul-B-Roache-MD-1815885698482185/" target="_blank" class="fb"><span class="name">Facebook</span></a></li>
+                <li><a href="https://www.instagram.com/shouldereducation/" target="_blank" class="ig"><span class="name">Instagram</span></a></li>
+                <li><a href="https://www.youtube.com/channel/UCT81PUb9q4oX0ozkU6VDc9A" target="_blank" class="yt"><span class="name">Youtube</span></a></li>
+              </ul>
+            </nav>
+          </div>
 
-				<nav>
-					<ul>
-						<li><a href="">About</a></li>
-						<li><a href="">Injuries & Treatment</a></li>
-						<li><a href="">RoacheMD Patients</a></li>
-						<li><a href="">Continuing Education</a></li>
-					</ul>
-				</nav>
+          <nav class="main">
+            <ul>
+              <li><a href="">About</a></li>
+              <li><a href="">Injuries & Treatment</a></li>
+              <li><a href="">RoacheMD Patients</a></li>
+              <li><a href="">Continuing Education</a></li>
+            </ul>
+          </nav>
 
-				<nav class="social">
-					<ul>
-						<li><a href="" class="fb">Facebook</a></li>
-						<li><a href="" class="tw">Twitter</a></li>
-						<li><a href="" class="yt">Youtube</a></li>
-					</ul>
-				</nav>
+          <div class="copyright">&copy;2019 Shoulder Education</div>
 
-        <div class="copyright">&copy; Shoulder Education 2019 </div>
+        </div>
       </footer>
 
     </div>
