--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
 
         <nav class="topnav">
           <ul>
-            <li><a href="">Abouts</a></li>
+            <li><a href="">About</a></li>
             <li><a href="">Injuries & Treatment</a></li>
             <li><a href="">RoacheMD Patients</a></li>
             <li><a href="">Continuing Education</a></li>
