--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
                   <li>World-class orthopaedic surgical and non-surgical treatment of shoulder injuries</li>
                   <li>Continuing ShoulderEducation for Surgeons, Physicians, Physical Therapists, Yoga Teachers, and Fitness Instructors</li>
               </ul>
-              <p><strong>Paul B. Roache</strong>, <span>CEO and Editor-in-Chief</span></p>
+              <p><strong>Paul B. Roache, MD</strong><br /><em>CEO and Editor-in-Chief</em></p>
               <p>
                   <a href="#">Learn more ></a>
               </p>
@@ -178,7 +178,7 @@
 					<div class="column">
 
 						<section class="consultations">
-							<h2>Patient Consulations</h2>
+							<h2>Patient Consultations</h2>
 							<p>Request an appointment with expert shoulder surgeon Dr. Paul B. Roache, MD.</p>
 							<p><a href="" class="button">Book Appointment</a></p>
 						</section>
