--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,7 @@
             <div class="mission">
               <h2>Our Mission:</h2>
               <ul>
-                  <li>Surgeon reviewed educational reference source for shoulder injury preventionand treatment</li>
+                  <li>Surgeon reviewed educational reference source for shoulder injury prevention and treatment</li>
                   <li>World-class orthopaedic surgical and non-surgical treatment of shoulder injuries</li>
                   <li>Continuing ShoulderEducation for Surgeons, Physicians, Physical Therapists, Yoga Teachers, and Fitness Instructors</li>
               </ul>
@@ -121,7 +121,7 @@
                     <div class="video-container">
                         <iframe width="1280" height="725" src="https://www.youtube.com/embed/upg8FEVKMKY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-										<figcaption><strong>VIDEO:</strong> New Research Methods: Rt sh cuff avulsion repair</figcaption>
+										<figcaption><strong>VIDEO:</strong> New Research Methods: Rotator cuff avulsion repair</figcaption>
 									</figure>
 								</li>
 							</ul>
@@ -180,7 +180,8 @@
 						<section class="consultations">
 							<h2>Patient Consultations</h2>
 							<p>Request an appointment with expert shoulder surgeon Dr. Paul B. Roache, MD.</p>
-							<p><a href="" class="button">Book Appointment</a></p>
+              <p><a href="" class="button">Book Appointment</a></p>
+              <p><strong>or call <a href="tel:415-447-0495">(415) 447-0495</a></strong></p>
 						</section>
 
 						<section class="continuing-ed">
