--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
     <link rel="canonical" href="https://www.shouldereducation.com/"/>
 
-    <meta name="description" content="Surgeon reviewed educational reference source for shoulder injury preventionand treatment"" />
+    <meta name="description" content="Surgeon reviewed educational reference source for shoulder injury preventionand treatment" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -248,7 +248,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
 
-    <script type="text/javascript">
+    <script>
 
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-131099725-1']);
